--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,13 @@
     <groupId>org.glassfish.jersey.containers</groupId>
     <artifactId>jersey-container-servlet-core</artifactId>
     <version>2.22.1</version>
-  </dependency>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.6.2</version>
+    </dependency>
+
 
   </dependencies>
 
